--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('animations.css');
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: 'Montserrat', sans-serif;
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 #hero {
@@ -26,7 +31,6 @@ body {
 
 .starRainBackground {
     position: relative;
-    /* or absolute, depending on your layout */
     animation: moveDiv 20s infinite linear;
 }
 
@@ -148,6 +152,10 @@ nav #contact:hover {
     font-weight: 400;
 }
 
+section {
+    height: 100vh;
+}
+
 @media only screen and (max-width: 768px) {
     .starRainBackground.desktop {
         display: none;
@@ -202,4 +210,35 @@ nav #contact:hover {
     #heroNavtext {
         display: none;
     }
+}
+
+#About {
+    overflow: hidden;
+    position: relative;
+}
+
+
+.webkit-appearance-none {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar {
+    width: 14px;
+    background-color: #080D32;
+}
+
+/* 4px scroll thumb. 10px margin from right margin */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 14px 14px transparent;
+    border: solid 4px transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 14px 14px #E7ECFF;
+    border: solid 4px transparent;
+    border-radius: 14px;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
 }
