--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
     overflow-x: hidden;
 }
 
+
 #hero {
     height: 100vh;
     background: linear-gradient(108deg, #1C2089 0%, #0C1855 50.52%, #26409B 100%);
@@ -152,8 +153,27 @@ nav #contact:hover {
     font-weight: 400;
 }
 
-section {
+#About {
     height: 100vh;
+}
+
+#Work {
+    min-height: 100vh;
+}
+
+section {
+    position: relative;
+}
+
+#circuitSVGcontainer {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/circuitBackground.svg");
+    background-position: center;
+    background-size: cover;
 }
 
 @media only screen and (max-width: 768px) {
