--- a/index.css
+++ b/index.css
@@ -238,6 +238,9 @@ nav #contact:hover {
 
 #Work {
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 section {
@@ -253,6 +256,12 @@ section {
     background-image: url("/images/circuitBackground.svg");
     background-position: center;
     background-size: cover;
+}
+
+#pageInProgress {
+    position: relative;
+    height: 80vh;
+    z-index: 20;
 }
 
 @media only screen and (max-width: 768px) {
