--- a/index.css
+++ b/index.css
@@ -174,12 +174,73 @@ nav #contact:hover {
     margin-bottom: 0.2em;
 }
 
+#workText,
 #aboutMeText {
     color: rgba(8, 13, 50, 0.75);
     text-align: justify;
     font-size: 1.1em;
     font-weight: 500;
+}
+
+#aboutMeText {
     width: calc(100% - 3em);
+}
+
+#workText {
+    margin-bottom: 1em;
+}
+
+#tools {
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 35px 35px;
+    gap: 1em;
+}
+
+#tools div {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#tools img {
+    width: 35px;
+    border-radius: 8px;
+}
+
+.project {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background-position: center;
+    background-size: cover;
+}
+
+.project:hover {
+    scale: 1.05;
+}
+
+#work h1 {
+    color: #0C1855;
+    font-size: 6em;
+    font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 0.2em;
+}
+
+#circuitSVGcontainer {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2em;
+    padding-left: 8vw;
+    padding-right: 8vw;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    height: 80vh;
 }
 
 @media screen and (min-width: 1600px) {
@@ -233,12 +294,13 @@ nav #contact:hover {
     margin-left: 50px;
 }
 
-#aboutSocialMedia img {
-    max-width: 50px;
+#aboutSocialMedia a {
+    width: 50px;
+    height: 50px;
     transition: all ease-in-out 100ms;
 }
 
-#aboutSocialMedia img:hover {
+#aboutSocialMedia a:hover {
     scale: 1.1;
     cursor: pointer;
 }
@@ -261,9 +323,6 @@ nav #contact:hover {
 
 #Work {
     min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 section {
@@ -271,11 +330,6 @@ section {
 }
 
 #circuitSVGcontainer {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
     background-image: url("/images/circuitBackground.svg");
     background-position: center;
     background-size: cover;
